--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
 social-network-links:
 #  rss: true
   email: "opseu549@tuta.io"
-  facebook: "https://www.facebook.com/groups/638743390217436/"
+  facebook: "groups/638743390217436/"
 #  github: daattali
 #  twitter: daattali
 #  reddit: yourname
@@ -94,7 +94,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "OPSEU549.org"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
