--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
     - 2018-2021 Extension: "https://opseu.org/wp-content/uploads/2018/05/2018-2021_ops_unified_extension_agreement.pdf"
     - Salary Schedule: "https://opseu.org/wp-content/uploads/2019/05/copy_of_opseu_salary_schedule_2017-2021_unified_send.pdf"
   OPSEU: "http://opseu.org"
-  Readme: "readme"
+  Readme: "README"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
