--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: the local branch of OPSEU at the Ontario Science Centre
 
 # List of links in the navigation bar
 navbar-links:
-  About Us: "about"
+  About Us: "aboutme"
   Resources:
     - 2015-2017 Collective Agreement: "https://opseu.org/wp-content/uploads/2016/06/2015-2017_opseu_central_unified_agreement_-_final.pdf"
     - 2018-2021 Extension: "https://opseu.org/wp-content/uploads/2018/05/2018-2021_ops_unified_extension_agreement.pdf"
