--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ avatar: "/img/OPSEU-Logo.jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
+navbar-col: "#3B92F2"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+footer-col: "#3B92F2"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
