--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ avatar: "/img/OPSEU-Logo.jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#95bce5"
+navbar-col: "#EAF2FA"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
@@ -48,7 +48,7 @@ link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#3B92F2"
 footer-text-col: "#777777"
-footer-link-col: "#95bce5"
+footer-link-col: "#eaf2fa"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
