--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ navbar-links:
   COVID-19:
     - OPSEU COVID-19 FAQ: "https://opseu.org/2019-novel-coronavirus-covid-19/"
     - COVID-19 info: "_pages/covid-19"
+    - Mandatory Vaccines FAQ: "https://opseu.org/news/frequently-asked-questions-about-mandatory-vaccinations/132444/"
   Resources:
     - Useful resources: "resources"
     - 2015-2017 Collective Agreement: "https://opseu.org/wp-content/uploads/2016/06/2015-2017_opseu_central_unified_agreement_-_final.pdf"
