--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
 #  rss: true
-  email: "opseu549@tuta.io"
+  email: "opseu549@gmail.com"
   facebook: "groups/638743390217436/"
 #  github: daattali
 #  twitter: daattali
